# sort_by_derive

./: Cargo.toml  README.md  rustfmt.toml
.github/workflows/: rust.yml
src/: enum_accessor.rs  enum_sequence.rs  enum_variant_accessor.rs  lib.rs  sort_by.rs
tests/: enum_variant_accessor.rs
tests/ui/: fail_alias_conflicting_field_ident.rs  fail_alias_conflicting_field_ident.stderr  fail_field_conflicting_alias.rs  fail_field_conflicting_alias.stderr  fail_field_conflicting_method.rs  pass_alias_avoiding_field_ident.rs  pass_alias_avoiding_method.rs
