[package]
name = "sort_by_derive"
version = "0.1.16"
edition = "2021"
license = "Unlicense"
description = "Derive macro SortBy and helper macros EnumAccessor and EnumSequence, deriving traits `Ord`, `PartialOrd`, `Eq`, `PartialEq` and `Hash` for structs and enums that can't automatically derive from those traits."
homepage = "https://github.com/valsteen/sort_by_derive"
documentation = "https://github.com/valsteen/sort_by_derive/#readme"
repository = "https://github.com/valsteen/sort_by_derive"
keywords = ["macro", "derive", "ordering", "sorting", "enum"]
categories = ["development-tools","rust-patterns","development-tools::procedural-macro-helpers"]
readme = "README.md"

[lib]
proc-macro = true
doctest = false

[dependencies]
proc-macro2 = "^1.0.52"
syn = { version = "^2", features = ["full"] }
quote = "^1.0.25"
either = "^1.4.0"
pretty_assertions = "^1"

[dev-dependencies]
rust-format = "^0"
